roles/addons/files/dex-db-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: dex-postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
          - image: postgres
            name: dex-postgres
            ports:
            - containerPort: 5432
              name: postgres-port
