roles/addons/files/dex-worker-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: dex
    role: worker
  name: dex-worker
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dex
        role: worker
    spec:
      containers:
          - image: quay.io/coreos/dex
            name: dex-worker
            command:
              - "/opt/dex/bin/dex-worker"
            ports:
            - containerPort: 5556
              name: worker-port
            readinessProbe:
              httpGet: &health
                path: /health
                port: 5556
              timeoutSeconds: 1
              periodSeconds: 2
            livenessProbe:
              httpGet: *health
              initialDelaySeconds: 15
              timeoutSeconds: 1
            resources:
              requests: { cpu: 200m, memory: 256Mi }
            # In production, you will likely want to include your own trusted
            # /etc/ca-certificates and /etc/ssl in your container.
            volumeMounts:
              - name: ca
                mountPath: /etc/ca-certificates
                readOnly: true
              - name: ssl
                mountPath: /etc/ssl
                readOnly: true
      volumes:
        - name: ca
          hostPath:
            path: /etc/ca-certificates
        - name: ssl
          hostPath:
            path: /etc/ssl
