roles/addons/files/dex-worker-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex-worker
spec:
  ports:
    - name: worker
      port: 5556
  selector:
    app: dex
    role: worker
